# cliscrape

./: Cargo.toml  DESIGN.md  README.md  test_eof.input  test_eof.textfsm  test_filldown.input  test_filldown.textfsm  test_list.input  test_list.textfsm  test_required.input  test_required.textfsm  test_states.input  test_states.textfsm
.claude/: settings.local.json.backup
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.5-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/: 1-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: template_performance.rs  throughput.rs
examples/: cisco_show_interfaces.textfsm  output.txt
src/: cli.rs  debug_pest.rs  lib.rs  logging.rs  main.rs  output.rs
src/engine/: convert.rs  coverage.rs  debug.rs  fsm.rs  macros.rs  mod.rs  records.rs  types.rs
src/template/: convert.rs  library.rs  loader.rs  metadata.rs  mod.rs  modern.rs  resolver.rs  textfsm.pest
src/transcript/: ios_prompt.rs  mod.rs
src/tui/: app.rs  browser.rs  editor.rs  event.rs  mod.rs  picker.rs  trace.rs  ui.rs  watch.rs  worker.rs
templates/: arista_eos_show_version.yaml  cisco_ios_show_interfaces.yaml  cisco_ios_show_version.yaml  cisco_nxos_show_version.yaml  juniper_junos_show_version.yaml
tests/: cli_parse_e2e.rs  cli_parse_help.rs  convert_cli_defaults.rs  coverage.rs  modern_templates.rs  template_library.rs  template_macro_expansion.rs  textfsm_compat.rs  validation.rs
(+194 files in other folders)
