[package]
name = "cliscrape"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.3"
thiserror = "2.0.18"
pest = "2.7"
pest_derive = "2.7"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
comfy-table = "7.1"
toml = "1.0.3"
serde_yaml_ng = "0.10.0"
serde_path_to_error = "0.1.20"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false
